--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.3.6",
+    "pinia": "^2.2.8",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^6.0.1"
   }
 }
