--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@originjs/vite-plugin-federation": "^1.3.6",
     "pinia": "^2.2.8",
+    "pubsub-js": "^1.9.5",
     "vue": "^3.5.13"
   },
   "devDependencies": {
